# systemf

./: README.md  systemf.cabal
src/Language/: LambdaCalculus.hs
src/Language/LambdaCalculus/: AST.hs  Context.hs  Evaluator.hs  Parser.hs  Pretty.hs  TypeChecker.hs  Types.hs
src/Language/LambdaCalculus/AST/: Term.hs
src/Language/LambdaCalculus/Parser/: Common.hs  Term.hs  Types.hs
src/Language/LambdaCalculus/Pretty/: Term.hs  Types.hs
systemfi/: Main.hs
test/: Spec.hs
test/tests/: t1.golden  t1.lc  t2.lc  t3.golden  t3.lc  t4.lc  t5.lc  t6.golden  t6.lc  t7.golden  t7.lc
