name:                systemf
version:             0.1.0.0
synopsis:            A System F interpreter
description:         Please see README.md
homepage:            https://github.com/kseo/systemf#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD3
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.LambdaCalculus
                       Language.LambdaCalculus.AST
                       Language.LambdaCalculus.AST.Term
                       Language.LambdaCalculus.Context
                       Language.LambdaCalculus.Evaluator
                       Language.LambdaCalculus.Parser
                       Language.LambdaCalculus.Parser.Common
                       Language.LambdaCalculus.Parser.Term
                       Language.LambdaCalculus.Parser.Types
                       Language.LambdaCalculus.Pretty
                       Language.LambdaCalculus.Pretty.Term
                       Language.LambdaCalculus.Pretty.Types
                       Language.LambdaCalculus.TypeChecker
                       Language.LambdaCalculus.Types
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.1.0 && < 2.3.0,
                       parsec -any
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts
  ghc-options: -Wall -O2

executable systemfi
  hs-source-dirs:      systemfi
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline == 0.7.*
                     , systemf
  default-language:    Haskell2010

test-suite systemf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring -any
                     , filepath == 1.4.*
                     , Glob == 0.7.*
                     , systemf
                     , tasty == 0.11.*
                     , tasty-golden == 2.3.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/systemf
